# url-shortener-api9ef9c89d-c846-441c-81f1-de82bd0e5666

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: api_get_url_analytics_service.py  api_shorten_url_service.py  get_original_url_service.py  get_url_analytics_service.py  login_service.py  logout_service.py  manage_api_keys_service.py  register_service.py  server.py  shorten_url_service.py  update_preferences_service.py  update_profile_service.py
